# globetrotter

./: .dockerignore  .gitignore  .goreleaser.yaml  .typos.toml  Cargo.toml  Dockerfile  LICENSE  README.md  globetrotter.schema.json  release.sh  taskfile.yaml
.github/workflows/: build.yaml  lint.yaml  release.yaml  test.yaml
crates/globetrotter/: Cargo.toml
crates/globetrotter-cli/: Cargo.toml
crates/globetrotter-cli/src/: base_dir.rs  convert.rs  format.rs  main.rs  options.rs  telemetry.rs  watch.rs
crates/globetrotter-cpp/: Cargo.toml
crates/globetrotter-cpp/src/: config.rs
crates/globetrotter-csharp/: Cargo.toml
crates/globetrotter-dart/: Cargo.toml
crates/globetrotter-elixir/: Cargo.toml
crates/globetrotter-golang/: Cargo.toml
crates/globetrotter-java/: Cargo.toml
crates/globetrotter-kotlin/: Cargo.toml
crates/globetrotter-lua/: Cargo.toml
crates/globetrotter-model/: Cargo.toml
crates/globetrotter-model/src/: color.rs  diagnostics.rs  json.rs  language.rs  lib.rs  toml.rs  validation.rs
crates/globetrotter-php/: Cargo.toml
crates/globetrotter-php/src/: lib.rs
crates/globetrotter-python/: Cargo.toml
crates/globetrotter-python/src/: config.rs
crates/globetrotter-ruby/: Cargo.toml
crates/globetrotter-rust/: Cargo.toml
crates/globetrotter-rust/examples/handlebars/: globetrotter.yaml  main.rs
crates/globetrotter-rust/src/: config.rs  lib.rs
crates/globetrotter-swift/: Cargo.toml
crates/globetrotter-swift/src/: config.rs
crates/globetrotter-typescript/: Cargo.toml
crates/globetrotter-typescript/src/: ast_oxc.rs  ast_swc.rs  config.rs  lib.rs
crates/globetrotter-zig/: Cargo.toml
crates/globetrotter/src/: diagnostics.rs  error.rs  executor.rs  gzip.rs  json.rs  lib.rs  progress.rs  target.rs
crates/globetrotter/src/config/: mod.rs
crates/globetrotter/src/config/v1/: mod.rs
docker/: build_from_source.dockerfile  package_precompiled.dockerfile
examples/example-rust/: Cargo.toml  README.md  build.rs  translations.toml
examples/example-rust/src/: helpers.rs  main.rs
test-data/: globetrotter.yaml  test.toml  test.ts
test-data/translations/: a.toml  b.toml
