[package]
name = "globetrotter-dart"
license = "MIT"
readme = "../../README.md"
documentation = "https://docs.rs/globetrotter-dart"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
  "internationalization",
  "localization",
]
keywords = [
  "i8n",
  "internationalization",
  "translations",
  "dart",
]

[features]
default = []

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde.workspace = true
color-eyre.workspace = true
tracing.workspace = true
