[package]
name = "globetrotter-rust"
license = "MIT"
readme = "../../README.md"
documentation = "https://docs.rs/globetrotter-rust"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
  "internationalization",
  "localization",
]
keywords = [
  "i8n",
  "internationalization",
  "translations",
  "rust",
]

[features]
default = []
# default = ["phf"]
# phf = ["dep:phf"]

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true

globetrotter-model.workspace = true

# rust codegen using syn
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
prettyplease = "0"
convert_case = "0"
itertools.workspace = true

# optional: phf
# phf = { version = "0", default-features = false, optional = true }
# phf_codegen = { version = "0", optional = true }

# optional: serde
# serde = { workspace = true, optional = true }

[dev-dependencies]
color-eyre.workspace = true
similar-asserts.workspace = true
indoc.workspace = true

# indexmap = { workspace = true, features = ["serde"] }
# phf = { version = "0", default-features = false }
# intl_pluralrules = "7"
